examples/negative/effects/region_spans_yield.kai
# The pinned-region invariant, enforced. A `region { }` bump-arena is a
# per-thread pointer; a fiber that parks inside the region would resume
# on another OS thread with a stale arena pointer (a dangling free). So a
# region may not reach a suspension point. Here the reach is TRANSITIVE:
# `cooperate` performs `Spawn.yield`, and the region only calls it — a
# syntactic scan of the region body would miss it, the effect row does
# not.
import spawn

fn cooperate() : Unit / Spawn =
  Spawn.yield()

fn main() : Int / Spawn = {
  let total = region {
    let scratch = [1, 2, 3]
    cooperate()
    sum(scratch)
  }
  total
}

fn sum(xs: [Int]) : Int =
  match xs {
    [] -> 0
    [h, ...t] -> h + sum(t)
  }
